# dpdknet

./: .dockerignore  .gitignore  LICENSE  Makefile  pyproject.toml
docker/: Dockerfile  entrypoint.sh  run_nested.sh
examples/send_receive/: build_docker_image.sh  compile_commands.json  demo.py  run_docker_app.sh
examples/send_receive/apps/receive/: Makefile  receive.c
examples/send_receive/apps/send/: Makefile  send.c
examples/send_receive/docker/: build-dpdk.sh  dpdk.Dockerfile  receiver.Dockerfile  sender.Dockerfile
examples/send_receive/utils/: run-dpdk-vhost.sh
src/dpdknet/: __init__.py  dpdknet.py  net.py
src/dpdknet/db/models/: base.py  host.py  link.py  ovs.py
src/dpdknet/domain/: __init__.py  base.py
src/dpdknet/domain/net/: __init__.py  host.py  link.py
src/dpdknet/domain/ovs/: __init__.py  bridge.py  flow.py  port.py
src/dpdknet/utils/: commands.py  link.py
util/: install-ovs-dpdk.sh
