[project]
name = "dpdknet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
dev = [
    "ruff"
]


[build-system]
requires = ["setuptools>=77.0.3", "pkginfo>=1.11"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EXE",
    "F",
    "FBT",
    "FURB",
    "G",
    "I",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PLW",
    "RET",
    "S",
    "SIM",
    "UP",
    "W",
    "YTT",
]

